--- a/index.html
+++ b/index.html
@@ -52,5 +52,6 @@
 </head>
   <body class="bg-spin-dark text-white font-sans antialiased overflow-x-hidden">
     <div id="root"></div>
+    <script type="moudule" src="/index.tsx"></script>
   </body>
 </html>
